force-app/main/default/objects/HFS_Relationship__c/HFS_Relationship__c.object-meta.xml
<CustomObject>
    <description>Typed, directed, time-bounded relationship between two entities.</description>
    <label>Relationship</label>
    <nameField>
        <displayFormat>REL-{000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>