force-app/main/default/objects/HFS_Relationship__c/fields/Object_Entity__c.field-meta.xml
<CustomField>
    <fullName>Object_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Object Entity</label>
    <referenceTo>HFS_Entity__c</referenceTo>
    <relationshipLabel>Relationships by Object Entity</relationshipLabel>
    <relationshipName>HFS_Relationship_Object_Entity</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>