force-app/main/default/objects/HFS_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>