force-app/main/default/objects/HFS_Relationship__c/fields/Superseded_At__c.field-meta.xml
<CustomField>
    <fullName>Superseded_At__c</fullName>
    <label>Superseded At</label>
    <type>DateTime</type>
</CustomField>