force-app/main/default/objects/HFS_Relationship__c/fields/Superseded_By__c.field-meta.xml
<CustomField>
    <fullName>Superseded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superseded By</label>
    <referenceTo>HFS_Relationship__c</referenceTo>
    <relationshipLabel>Relationships by Superseded By</relationshipLabel>
    <relationshipName>HFS_Relationship_Superseded_By</relationshipName>
    <type>Lookup</type>
</CustomField>