force-app/main/default/objects/HFS_Relationship__c/fields/Superseded_By_User__c.field-meta.xml
<CustomField>
    <fullName>Superseded_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superseded By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Relationships by Superseded By User</relationshipLabel>
    <relationshipName>HFS_Relationship_Superseded_By_User</relationshipName>
    <type>Lookup</type>
</CustomField>