force-app/main/default/objects/HFS_Relationship__c/fields/Supersession_Approval__c.field-meta.xml
<CustomField>
    <fullName>Supersession_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supersession Approval</label>
    <referenceTo>HFS_Approval__c</referenceTo>
    <relationshipLabel>Relationships by Supersession Approval</relationshipLabel>
    <relationshipName>HFS_Relationship_Supersession_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>