force-app/main/default/objects/HFS_Relationship__c/fields/Supersession_Reason__c.field-meta.xml
<CustomField>
    <fullName>Supersession_Reason__c</fullName>
    <label>Supersession Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>