force-app/main/default/objects/HFS_Relationship__c/validationRules/Different_Entities.validationRule-meta.xml
<ValidationRule>
    <fullName>Different_Entities</fullName>
    <active>true</active>
    <description>A relationship must connect two different entity records.</description>
    <errorConditionFormula>Subject_Entity__c = Object_Entity__c</errorConditionFormula>
    <errorMessage>A relationship must connect two different entity records.</errorMessage>
</ValidationRule>