force-app/main/default/objects/HFS_Relationship__c/validationRules/Valid_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Date_Range</fullName>
    <active>true</active>
    <description>Valid To cannot be earlier than Valid From.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Valid_To__c)), Valid_To__c &lt; Valid_From__c)</errorConditionFormula>
    <errorMessage>Valid To cannot be earlier than Valid From.</errorMessage>
</ValidationRule>